@@ -29,7 +29,7 @@ namespace Marvel {
     enum class mvPythonDataType
     {
         String, Integer, Float, Bool, StringList, FloatList, Optional,
-        Object, IntList, KeywordOnly
+        Object, IntList, KeywordOnly, Double
     };
 
     //-----------------------------------------------------------------------------
